--- a/jquery-easyui/themes/default/easyui.css
+++ b/jquery-easyui/themes/default/easyui.css
@@ -1568,7 +1568,7 @@
 }
 .tabs-header,
 .tabs-tool {
-  background-color: #2A2E33;
+  background-color: #f1f6fd;
 }
 .tabs-header-plain {
   background: transparent;
