--- a/css/logincss/loginCss.css
+++ b/css/logincss/loginCss.css
@@ -28,7 +28,7 @@ body{
     background-size:100% 100%;
 }
 .right{
-    background:url("../../css/img/right.png") no-repeat;
+    background:url("../../css/img/topright.png") no-repeat;
     background-size:100% 100%;
 }
 .c_center{
