--- a/css/logincss/loginCss.css
+++ b/css/logincss/loginCss.css
@@ -56,7 +56,8 @@ body{
 }
 .loginForm{
     display: block;
-    margin-top:15%;
+    /*margin-top:15%;*/
+    margin-top:150px;
     margin-left:40%;
 }
 label{
@@ -73,10 +74,14 @@ label.error {
     padding: 5px 20px;
     background: url("../../css/img/login.png") no-repeat;
     background-size: 100% 100%;
+    color:#fff;
 }
 span{
     font-size: 12px;
     line-height: 12px;
+    color:#fff;
+    position:absolute;
+    padding-left:5px;
 }
 #reset{
     margin-left: 30px;
@@ -85,10 +90,12 @@ span{
     background: url("../../css/img/login.png") no-repeat;
     background-size: 100% 100%;
     border: hidden;
+    color:#fff;
 }
 .c_bottom p{
     display:block;
-    margin: 26% 25% 25% 25%;
+    /*margin: 26% 25% 25% 25%;*/
+    margin-top:200px;
     font-size: 14px;
     font-family: Microsoft YaHei;
     color: #568ff6;
