--- a/jquery-easyui/themes/icon.css
+++ b/jquery-easyui/themes/icon.css
@@ -1,3 +1,6 @@
+.icon-add2{
+	background: url('icons/add2.png') no-repeat center center;
+}
 .icon-blank{
 	background:url('icons/blank.gif') no-repeat center center;
 }
