--- a/lib/ligerUI/skins/Aqua/css/ligerui-layout.css
+++ b/lib/ligerUI/skins/Aqua/css/ligerui-layout.css
@@ -89,7 +89,7 @@
    *   panel  *
 * ------------ */
 .l-panel {
-    border: 1px solid #99BBE8;
+    border: none;
     position: relative;
     text-align: left;
 }
