--- a/lib/ligerUI/skins/ext/css/ligerui-fix.css
+++ b/lib/ligerUI/skins/ext/css/ligerui-fix.css
@@ -1,5 +1,5 @@
 .l-accordion-panel{ border-left:0px solid #BED5F3; border-right:none; border-bottom:1px solid #BED5F3; }
-body{ padding:0px; margin:0;   overflow:hidden;background-color:#d2e2f2}  
+body{ padding:0px; margin:0;   overflow:hidden;background-color:#ffffff}  
 .l-link{ display:block; height:26px; line-height:26px; padding-left:10px; text-decoration:underline; color:#333;}
 .l-link2{text-decoration:underline; color:white;}
 .l-layout-top{background:#102A49; color:White;}
