--- a/css/inputcharts.css
+++ b/css/inputcharts.css
@@ -1,4 +1,4 @@
-html, body { width: 100%; height: 100%; background-color:#d2e2f2}
+html, body { width: 100%; height: 100%; background-color:#ffffff}
 iframe { width: 100%; height: 100%; padding: 0; margin: 0; }
 img, body, html { border: 0; }
 html, body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, input, blockquote, th { margin: 0; padding: 0; }
@@ -14,7 +14,7 @@ img { vertical-align: middle; }
 
 .bodytable0 { width: 100%; border-collapse: collapse; }
     .bodytable0 td { line-height: 21px; padding: 2px; border: 1px solid #b6d6e6; color: #135294; }
-.bodytable1 { width: 100%; border-collapse: collapse; border: 1px solid #ddd; }
+.bodytable1 { width: 100%; }
     .bodytable1 td { line-height: 21px; padding-left: 5px; color: #135294; vertical-align: middle; }
         .bodytable1 td.left { line-height: 21px; padding-left: 5px; color: #135294; vertical-align: middle; border-left: 1px solid #ddd; }
 .bodytable2 { width: 100%; border-collapse: collapse; }
