--- a/lib/ligerUI/skins/Aqua/css/ligerui-dialog.css
+++ b/lib/ligerUI/skins/Aqua/css/ligerui-dialog.css
@@ -80,8 +80,8 @@
  /* --------------
    *   dialog  *
 * ------------ */ 
-.l-dialog{ position:absolute;z-index: 10000;  padding:0; margin:0;font-size:12px; border: 1px solid #BED5F3;border-radius: 5px;box-shadow: 0 1px 6px rgba(99,99,99,.3);} 
-.l-dialog table{ table-layout:auto;}
+.l-dialog{ position:absolute;z-index: 10000;  padding:0; margin:0;font-size:12px; border:none;border-radius: 5px;box-shadow: 0 1px 6px rgba(99,99,99,.3);} 
+.l-dialog table{ table-layout:auto;width:800px;}
 .l-dialog-fixed
 {
     position:fixed; right:0px; bottom:-100px;
@@ -90,7 +90,7 @@
 .l-dialog-table{ }
 .l-dialog-body{ position:relative; overflow:hidden;}
 .l-dialog{ padding:0; margin:0;font-size:12px; } 
-.l-dialog td,.l-dialog tr,.l-dialog td div{font-size:12px; } 
+.l-dialog td,.l-dialog tr,.l-dialog td div{font-size:14px;} 
 .l-dialog-cc{ background:white;}
 .l-dialog-tl,.l-dialog-tr,.l-dialog-bl,.l-dialog-br,.l-dialog-cl,.l-dialog-cr{width:0px; background:none;padding:0;margin:0;} 
 .l-dialog-tl,.l-dialog-tc,.l-dialog-tr{ height:26px;}
@@ -98,7 +98,7 @@
 
  
 .l-dialog-tl{ background:none;border-bottom: 1px solid #f5f5f5;}
-.l-dialog-tc{font-size: 14px;font-weight: bold;height: 29px;line-height: 29px;background: -webkit-gradient(linear, 0 0, 0 100%, from(#EFF5FE), to(#D6E4F4)); padding-left: 10px;background: -o-linear-gradient(top, #EFF5FE, #D6E4F4);_background:#EFF5FE;
+.l-dialog-tc{font-size: 14px;font-weight: bold;height: 29px;line-height: 29px;background: -webkit-gradient(linear, 0 0, 0 100%, from(#353c49), to(#353c49)); padding-left: 10px;background: -o-linear-gradient(top, #EFF5FE, #D6E4F4);_background:#EFF5FE;
 background: -ms-linear-gradient(top, #EFF5FE 0%,#D6E4F4 100%);
 background: linear-gradient(top, #EFF5FE, #D6E4F4);background: -moz-linear-gradient(top, #EFF5FE, #D6E4F4);
 filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#EFF5FE', endColorstr='#D6E4F4');
@@ -111,7 +111,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#EFF5FE', endC
 .l-dialog-cl{background:none;}
 .l-dialog-cr{background:none;}
 .l-dialog-cl{background:none;}
-.l-dialog-cl,.l-dialog-cc,.l-dialog-cr{border-top: 1px solid #BED5F3;}
+.l-dialog-cl,.l-dialog-cc,.l-dialog-cr{border-top: 1px solid #BED5F3;background-color:#bdc4d4;}
 
 .l-dialog-loading{position:absolute;top: 30%; left:40%; background:#fff url('../images/common/loading.gif') no-repeat; padding:8px; z-index:99000; height:auto; border:0;}
 
@@ -139,7 +139,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#EFF5FE', endC
 .l-dialog-extend-disabled{background-position:-68px -32px;cursor:default;}
 
 .l-dialog-tc-inner{ position:relative;height:26px; line-height:26px; width:100%;  }
-.l-dialog-title {  color:#000;font-weight:bold; font-weight:700; text-shadow:none; padding-left:3px; padding-right:20px; text-align:left; padding-top:0px;} 
+.l-dialog-title {  color:#ffffff;font-weight:bold; font-weight:700; text-shadow:none; padding-left:11px; padding-right:20px; text-align:left; padding-top:0px;margin-top:10px;background-color:#353c49} 
 
 .l-dialog-content{ padding-left:18px; padding-top:14px;padding-bottom:12px; overflow:auto;} 
 .l-dialog-content-noimage {padding-left:6px; padding-top:10px;padding-bottom:10px;}
@@ -244,10 +244,12 @@ text-shadow: 0 2px 2px rgba(0,0,0,0.22);
 	overflow:hidden; padding:0px;
 }
 .l-selectorwin .l-dialog-content .l-form {
-	margin:0; padding:2px; background:#EAF2FF;border-bottom: 1px solid #AECAF0;
+	margin-left:10px; background:#ffffff;
 }
 .l-selectorwin .l-dialog-buttons {
 	margin-top: 0;
+	margin-left:10px;
+	margin-bottom:10px;
 }
 .l-selectorwin .l-panel {
 	border:0;
