--- a/lib/ligerUI/skins/Aqua/css/ligerui-form.css
+++ b/lib/ligerUI/skins/Aqua/css/ligerui-form.css
@@ -1,5 +1,5 @@
  /* 表单 */
-.l-form { margin:7px;overflow:hidden;}
+.l-form { margin-top:10px;overflow:hidden;}
 .l-form .l-group{ clear:both; margin:0; height:28px; line-height:28px; font-weight:bold; font-size:12px; color:#333; border-bottom:solid 1px #ebebeb; padding-top:5px;margin-bottom:10px; display:block; position:relative; clear:both;}
 .l-group span{
     float:left;
@@ -29,6 +29,7 @@ margin-left: 40px;
 .l-form-container {
 	clear: both; 
 	overflow: hidden;
+	margin-left:11px;
 }
 /* -------------
    * 多行文本框颜色 *
@@ -46,7 +47,8 @@ margin-left: 40px;
 .l-text
 {
     position:relative;
-    border:1px solid #AECAF0; height:20px; line-height:20px;
+    border:1px solid #cccccc; height:20px; line-height:20px;
+	border-radius:2px;
     width:130px; background:white;
 }
 /* 文本框 验证不通过 */
