--- a/lib/ligerUI/skins/Gray/css/grid.css
+++ b/lib/ligerUI/skins/Gray/css/grid.css
@@ -98,11 +98,11 @@ padding-left: 15px;
 
 .l-grid-row-alt .l-grid-row-cell
 {
-    background:#F5F5F5 url('../images/ui/gridalt.gif') top repeat-x;
+    background:#FFFFFF;
 }
 .l-grid-row-over .l-grid-row-cell,.l-grid-row-over
 {
-    background:#EAEAEA
+    background:#FFFFFF
 }
 .l-selected .l-grid-row-cell,.l-selected
 {
