--- a/css/input.css
+++ b/css/input.css
@@ -1,4 +1,4 @@
-html, body { width: 100%; height: 100%; overflow: hidden; }
+html, body { width: 100%; height: 100%; overflow: hidden;background-color:#f1f6fd }
 iframe { width: 100%; height: 100%; padding: 0; margin: 0; }
 img, body, html { border: 0; }
 html, body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, input, blockquote, th { margin: 0; padding: 0; }
