--- a/lib/ligerUI/skins/Aqua/css/ligerui-grid.css
+++ b/lib/ligerUI/skins/Aqua/css/ligerui-grid.css
@@ -98,7 +98,7 @@ background: url('../images/panel/header-bg.gif') repeat-x left -1px; position:re
 	background: #ffffff;
 	overflow: hidden;
 	width:100%;
-	padding-top:10px;
+	padding:10px;
 } 
 .l-grid-scroller {
 position: relative;
@@ -250,7 +250,8 @@ padding-right: 10px;
 .l-grid-hd-cell
 {   
      padding:0; margin:0;overflow:hidden; 
- border:none; 
+     /*border:none;*/
+     border:2px solid; 
     text-align:center;
 }
 .l-grid-hd-cell-last
