--- a/jquery-easyui/demo.css
+++ b/jquery-easyui/demo.css
@@ -1,11 +1,11 @@
 body {
     font-family:verdana,helvetica,arial,sans-serif;
     padding:20px;
-    font-size:12px;
+    font-size:14px;
     margin:0;
     width: 100%;
     height: 100%;
-    background-color: #bdc4d4;
+    background-color: #cccccc;
 }
 
 h2 {
@@ -28,7 +28,7 @@ h2 {
 }
 #top{
     overflow: hidden;
-    height:74px;
+    height:77px;
     text-align: center;
     margin: 0;
     padding: 0;
