fsx 样式修改，添加提示

--- a/css/homepagecss/usermanger.css
+++ b/css/homepagecss/usermanger.css
@@ -79,6 +79,7 @@
     background-color: #ffffff;!important;
 }
 #tb button{
+	outline: none;
     border: 1px solid #1c66dc;
     height: 25px;
     line-height: 2px;
