--- a/css/homepagecss/vehicle.css
+++ b/css/homepagecss/vehicle.css
@@ -32,12 +32,17 @@ button:active,button:hover{
 }
 .panel-header,
 .panel-body {
-  border-width: 0px;!important;
-  border-style: solid;
+ border: 1px solid #e2ebf8;!important;
 
 }
 .window .window-header {
   background-color:#353c49;!important;
   padding: 0px 0px 0px 0px;
 }
-
+.panel-title {
+    font-size: 12px;
+    font-weight: bold;
+    color: #cfd0d2;
+    height: 20px;
+    line-height: 16px;
+}
