--- a/css/homepagecss/usermanger.css
+++ b/css/homepagecss/usermanger.css
@@ -54,7 +54,7 @@
 
 .panel-title{
     text-align: left;!important;
-    padding: 10px 5px;
+    padding: 10px 10px;
     font-size: 14px;
 
 }
@@ -77,6 +77,7 @@
 .datagrid-toolbar{
     border: none;!important;
     background-color: #ffffff;!important;
+	padding:10px;
 }
 #tb button{
 	outline: none;
