--- a/css/input.css
+++ b/css/input.css
@@ -3,7 +3,7 @@ iframe { width: 100%; height: 100%; padding: 0; margin: 0; }
 img, body, html { border: 0; }
 html, body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, input, blockquote, th { margin: 0; padding: 0; }
 * { font-family: 微软雅黑; font-size: 12px; }
-img { vertical-align: middle; }
+img { vertical-align: middle;margin-top:5px;}
 
 * { font-size: 12px; }
 .td_title { height: 24px; line-height: 24px; background: #fff; color: #135294; font-weight: bold; border: 1px solid #fff; padding-left: 20px; text-align: left; }
